# py2bin

./: .gitignore  README.md  __init__.py  main.py  pipeline.py  pyproject.toml
infrastructure/: compiler.py  converter.py  packager.py
interfaces/: interfaces.py
schemas/: schemas.py
